# browser-video

./: LICENSE_MIT  README.md
proxy/: README.md  local-envoy.yaml  run.sh
signal-server/: .gitignore  README.md  go.mod  go.sum  main.go
signal-server/client/: client.go  handlers.go
web/: .gitignore  .prettierignore  README.md  next.config.js  package-lock.json  package.json
web/components/: Chat.tsx  FilterMenu.tsx  Header.tsx  Meeting.tsx
web/pages/: app.tsx  home.tsx  index.tsx  meeting.tsx  register.tsx
web/styles/: FilterMenu.module.css  Header.module.css  Home.module.css  Meeting.module.css
web/utils/: rtc.ts  signalSession.ts
web/video-processor/: Cargo.toml  README.md
web/video-processor/src/: filter.rs  lib.rs  video.rs
